# sharpiso

./: .gitignore
data/: README  corner.0.A10.grad.nrrd  corner.0.A10.nrrd  corner.1.A10.grad.nrrd  corner.1.A10.nrrd  corner.3.A10.grad.nrrd  corner.3.A10.nrrd  corner.4.A10.grad.nrrd  corner.4.A10.nrrd  corner.7.A10.grad.nrrd  corner.7.A10.nrrd  cornerA.4x.grad.nrrd  cornerA.4x.nrrd  cornerB.4x.grad.nrrd  cornerB.4x.nrrd  cube3D.A10x.gnoiseA.nrrd  cube3D.A10x.grad.noisy20.nrrd  cube3D.A10x.grad.noisy50.nrrd  cube3D.A10x.grad.nrrd  cube3D.A10x.nrrd  cube3D.A10x.unoiseB.nrrd  cylinder3D.A10x.grad.nrrd  cylinder3D.A10x.nrrd  edge3D.A10x.grad.nrrd  edge3D.A10x.nrrd  edgeB.3x.nrrd  edgeC.3x.nrrd  edgeD.4x.grad.nrrd  half_cubeA.10x.grad.nrrd  half_cubeA.10x.nrrd  saddleA.4x.grad.nrrd  saddleA.4x.nrrd  saddleB.4x.grad.nrrd  saddleB.4x.nrrd  saddleC.4x.grad.nrrd  saddleC.4x.nrrd
include/: NrrdIO.h  ijk.txx  ijkIO.txx  ijkNrrd.h  ijkbits.txx  ijkcoord.txx  ijkcube.txx  ijkgraph.txx  ijkgrid.txx  ijkgrid_macros.h  ijkgrid_nrrd.txx  ijkinterpolate.txx  ijkisopoly.txx  ijklist.txx  ijkmesh.txx  ijkmesh_cpp11.txx  ijkmesh_geom.txx  ijkobject_grid.txx  ijkprint.txx  ijkscalar_grid.txx  ijkstring.txx  ijktime.txx  ijkvector_grid.txx  sharpiso_array.txx  sharpiso_cubes.h  sharpiso_eigen.h  sharpiso_grids.h  sharpiso_linear_alg.txx  sharpiso_types.h
src/anisograd/: CMakeLists.txt  NrrdIO.h  anisograd.cxx  anisograd.h  anisograd_main.cxx  anisograd_operators.cxx  anisograd_operators.h  testanisograd.pl
src/anisogradinfo/: CMakeLists.txt  anisograd.cxx  anisograd.h  anisograd_main.cxx  anisograd_operators.cxx  anisograd_operators.h  anisogradinfo.cxx  anisogradinfo.h  anisogradinfo_main.cxx  ijk.txx  ijkcube.txx  ijkmerge.txx  isodual3D_types.h  testanisoinfo.pl
src/cgradient/: CMakeLists.txt  cgradient.cxx  cgradient.h  cgradient_main.cxx  ijk.txx  ijkmerge.txx  ijkvector_grid.txx
src/computegrad/: CMakeLists.txt  cgradient.cxx  cgradient.h  cgradient_inputinfo.h  cgradient_main.cxx  isodual3D_datastruct.h  isodual3D_types.h  religrad_computations.cxx  religrad_computations.h  religrad_datastruct.h  religrad_inputIO.h  religrad_main.cxx  sharpiso_scalar.txx
src/countdegree/: CMakeLists.txt  countdegree.cxx  countdegree.h  countdegree_IO.cxx  countdegree_IO.h  countdegree_main.cxx  countdegree_types.h
src/data/: README  edgeA.3x.grad.nrrd  edgeA.3x.nrrd  edgeB.3x.grad.nrrd  edgeC.3x.grad.nrrd  edgeD.3x.nrrd
src/findEdge/: CMakeLists.txt  findedgeMain.cxx
src/findEdgeCount/: CMakeLists.txt  findEdgeCount.cxx  findEdgeCount.h  findEdgeCountIO.cxx  findEdgeCountIO.h  findEdgeCountMain.cxx  findEdgeCountTypes.h
src/findsharp/: CMakeCache.txt  CMakeLists.txt  findSharp_eigen_info.cxx  findSharp_eigen_info.h  findsharp.cxx  findsharp_eigen_info.cxx  findsharp_eigen_info.h  install_manifest.txt
src/grad2hermite/: CMakeLists.txt  grad2hermite.cxx  sharpiso_get_gradients.cxx  testgrad2hermite.pl
src/ijkgenmesh/: CMakeLists.txt  ijkIO.txx  ijkcube.txx  ijkgencoord.txx  ijkgengeom.txx  ijkgenmesh.cxx  ijkgenmesh.h  ijkgenmesh.rar  ijkgenmesh.txx  ijkgenmesh_main.cxx  ijkmesh.txx  ijkstring.txx
src/ijkgenscalar/: CMakeLists.txt  ijkgengeom.txx  ijkgenscalar.cxx  ijkgenscalar.h  ijkgenscalar.txx  ijkgenscalarIO.h  ijkgradientfield.txx  ijkscalarfield.txx
src/ijkgenscalarNew/: CMakeLists.txt  ijkgenscalar.txx  ijkgenscalarIO.cxx
src/ijkgradientdiff/: CMakeLists.txt  ijkgradientdiff.cxx
src/ijkscalarinfo/: CMakeLists.txt  NrrdIO.h.bak  ijkcontourtree.txx  ijkdatatable.txx  ijkscalarinfo.11-20-2013  ijkscalarinfo.cxx  ijkscalarinfo.h  ijkscalarinfo.v0.3.1.tar  ijkscalarinfo.v0.3.2.tar  testsort.cxx
src/ijkscalarinfo/TXX/: ijk.txx  ijkcontourtreeIO.txx  ijkcoord.txx  ijkcube.txx  ijkgrid.txx  ijkprint.txx  ijkscalar_grid.txx
src/isodual3D/: CMakeLists.txt  ijkdualtable.cxx  ijkdualtable.h  ijkdualtable_ambig.cxx  ijktable_ambig.cxx  ijktable_poly.cxx  isodual3D.cxx  isodual3D.h  isodual3DIO.cxx  isodual3DIO.h  isodual3D_ambig.cxx  isodual3D_ambig.h  isodual3D_datastruct.cxx  isodual3D_datastruct.h  isodual3D_decimate.cxx  isodual3D_decimate.h  isodual3D_doxygen.config  isodual3D_extract.cxx  isodual3D_extract.h  isodual3D_isovert.cxx  isodual3D_isovert.h  isodual3D_main.cxx  isodual3D_position.cxx  isodual3D_position.h  isodual3D_types.h  isovert_info.cxx  runisodual.pl  sh_point_datastruct.cxx  sh_point_datastruct.cxx~  sh_point_datastruct.h  sh_point_find.cxx  sh_point_find.cxx~  sh_point_find.h  sharpiso_closest.h  sharpiso_intersect.h  sharpiso_svd.h~  sharpv_info.cxx  testisodual3D.pl
src/mergesharp/: CMakeLists.txt  RELEASE_NOTES  ijkIO.txx  ijkNrrd.h  ijkbits.txx  ijkcoord.txx  ijkcube.txx  ijkdualtable_ambig.h  ijkgraph.txx  ijkgrid_macros.h  ijkgrid_nrrd.txx  ijkinterpolate.txx  ijkisopoly.txx  ijklist.txx  ijkmesh.txx  ijkmesh_cpp11.txx  ijkmesh_geom.txx  ijkobject_grid.txx  ijkprint.txx  ijktable_ambig.cxx  ijktable_ambig.h  ijktable_poly.h  ijktime.txx  mergesharp.cxx  mergesharp.h  mergesharpIO.cxx  mergesharpIO.h  mergesharp_ambig.cxx  mergesharp_ambig.h  mergesharp_apply.txx  mergesharp_check_map.cxx  mergesharp_check_map.h  mergesharp_datastruct.cxx  mergesharp_datastruct.h  mergesharp_debug.h  mergesharp_extract.cxx  mergesharp_extract.h  mergesharp_isovert.cxx  mergesharp_isovert.h  mergesharp_main.cxx  (+17 more)
src/py_scripts/: FindEdgeCount.py  ReadMe  buildGrid.py  buildGrid2.py  chart_data.py  cmd_line.py  colorMesh.py  colorVert.py  createCube.py  createCube2.py  create_command.py  (+43 more)
src/test/: CMakeLists.txt  get_vertex_edge_pair.cxx  ijkdualtable.h  ijkgrid.txx  ijkscalar_grid.txx  ijktable_ambig.cxx  ijktable_ambig.h  ijktable_poly.cxx  ijktable_poly.h  isodual3D_ambig.cxx  isodual3D_ambig.h  isodual3D_datastruct.h  isodual3D_isovert.h  sh_point_svdcal.h  sharpiso_dist.txx  sharpiso_feature.h  sharpiso_findIntersect.h  sharpiso_svd.cxx  test_contains.cxx  test_linear_alg.cxx  test_scalar_func.cxx  test_ve_pair.cxx  test_voxel.cxx  testambig.cxx  testbin.cxx  testdist.cxx  testfeature.cxx  testintersect.cxx  testmerge.cxx  testmerge2.cxx  testscalar.cxx  testsort.cxx
(+64 files in other folders)
