PROJECT(FINDSHARP)

#---------------------------------------------------------

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF (NOT DEFINED ${SHARP_DIR})
  GET_FILENAME_COMPONENT(SHARP_ABSOLUTE_PATH "../.." ABSOLUTE)
  SET(SHARP_DIR ${SHARP_ABSOLUTE_PATH} CACHE PATH "SHARP directory")
ENDIF (NOT DEFINED ${SHARP_DIR})

SET(CMAKE_INSTALL_PREFIX "${SHARP_DIR}/")
SET(LIBRARY_OUTPUT_PATH ${SHARP_DIR}/lib CACHE PATH "Library directory")
SET(NRRD_LIBDIR "${SHARP_DIR}/lib")
SET(SHARP_ISOTABLE_DIR "${SHARP_DIR}/isotable" CACHE PATH "Isotable directory")
SET(FINDSHARP_DIR "src/findsharp")

#---------------------------------------------------------

IF (NOT CMAKE_BUILD_TYPE)
  SET (CMAKE_BUILD_TYPE Release CACHE STRING
       "Default build type: Release" FORCE)
ENDIF (NOT CMAKE_BUILD_TYPE)

INCLUDE_DIRECTORIES("${SHARP_DIR}/include")
INCLUDE_DIRECTORIES("${SHARP_DIR}/src/sharpiso")

ADD_EXECUTABLE(findsharp findsharp.cxx findsharp_eigen_info.cxx)

SET(CMAKE_INSTALL_PREFIX ${SHARP_DIR})
INSTALL(TARGETS findsharp DESTINATION "bin/$ENV{OSTYPE}")

ADD_CUSTOM_TARGET(tar WORKING_DIRECTORY ../.. COMMAND tar cvfh ${FINDSHARP_DIR}/findsharp.tar ${FINDSHARP_DIR}/*.cxx ${FINDSHARP_DIR}/*.h ${FINDSHARP_DIR}/*.txx ${FINDSHARP_DIR}/CMakeLists.txt)
