PROJECT(IJKSCALARINFO)

#---------------------------------------------------------

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF (NOT DEFINED ${IJK_DIR})
  GET_FILENAME_COMPONENT(IJK_ABSOLUTE_PATH "../.." ABSOLUTE)
  SET(IJK_DIR ${IJK_ABSOLUTE_PATH} CACHE PATH "IJK directory")
ENDIF (NOT DEFINED ${IJK_DIR})

SET(CMAKE_INSTALL_PREFIX "${IJK_DIR}/")
SET(LIBRARY_OUTPUT_PATH ${IJK_DIR}/lib CACHE PATH "Library directory")
SET(IJKSCALARINFO_DIR "src/ijkscalarinfo")
SET(NRRD_LIBDIR "${IJK_DIR}/lib/$ENV{OSTYPE}")
SET(IJK_ISOTABLE_DIR "${IJK_DIR}/isotable" CACHE PATH "Isotable directory")

#---------------------------------------------------------

IF (NOT CMAKE_BUILD_TYPE)
  SET (CMAKE_BUILD_TYPE Release CACHE STRING 
       "Default build type: Release" FORCE)
ENDIF (NOT CMAKE_BUILD_TYPE)

INCLUDE_DIRECTORIES("${IJK_DIR}/include")
LINK_DIRECTORIES("${NRRD_LIBDIR}")
LINK_LIBRARIES(NrrdIO z)

ADD_EXECUTABLE(ijkscalarinfo ijkscalarinfo.cxx)

SET(CMAKE_INSTALL_PREFIX ${IJK_DIR})
INSTALL(TARGETS ijkscalarinfo DESTINATION "bin/$ENV{OSTYPE}")

ADD_CUSTOM_TARGET(tar WORKING_DIRECTORY ../.. COMMAND tar cvfh ${IJKSCALARINFO_DIR}/ijkscalarinfo.tar ${IJKSCALARINFO_DIR}/INSTALL ${IJKSCALARINFO_DIR}/CHANGES ${IJKSCALARINFO_DIR}/*.cxx ${IJKSCALARINFO_DIR}/*.h ${IJKSCALARINFO_DIR}/*.txx ${IJKSCALARINFO_DIR}/CMakeLists.txt ${IJKSCALARINFO_DIR}/man/*)

